# plover-sqlite-dictionary

./: README.md  setup.cfg
plover_sqlite_dictionary/: __init__.py
