[metadata]
name = plover-sqlite-dictionary
version = 0.0.0
author = user202729
description = 
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = 
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
py_modules = plover_sqlite_dictionary

[options.entry_points]
plover.dictionary =
	jssql = plover_sqlite_dictionary:SQLiteJSONDictionary
	sql = plover_sqlite_dictionary:SQLiteDictionary
